# 0-assembly

./: CMakeLists.txt  Readme.md
dependencies/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
dependencies/nasm/: CMakeLists.txt  README.md
dependencies/srelib/: CMakeLists.txt  egg_tests.cpp  file_tests.cpp  printf_tests.cpp  strtol_tests.cpp
dependencies/srelib/srelib/: char.c  char.h  egg.c  egg.h  file.c  file.h  printf.c  printf.h  readint.c  readint.h  srelib.h  strtol.c  strtol.h
dependencies/standard_includes/: stdbool.h  stdint.h
source/: CMakeLists.txt
source/1_1_hello_world/: CMakeLists.txt  Readme.md
source/1_1_hello_world/solution/: hello.asm
source/1_1_hello_world/source/: hello.asm
source/1_2_stack_challenge/: CMakeLists.txt
source/1_2_stack_challenge/solution/: challenge.c
source/1_2_stack_challenge/source/: challenge.c
source/2_1_assembly/: 0_return_tests.cpp  1_type_conversion_tests.cpp  2_arithmetic_tests.cpp  3_bitwise_tests.cpp  4_memory_tests.cpp  5_conditional_tests.cpp  6_loop_tests.cpp  CMakeLists.txt
source/2_1_assembly/include/: macros.asm
source/2_1_assembly/solution/: 0_return.asm  1_type_conversion.asm  2_arithmetic.asm  3_bitwise.asm  4_memory.asm  5_conditional.asm  6_loop.asm
source/2_1_assembly/source/: 0_return.asm  1_type_conversion.asm  2_arithmetic.asm  3_bitwise.asm  4_memory.asm  5_conditional.asm  6_loop.asm
source/2_2_egg_hunter/: CMakeLists.txt  Readme.md
source/2_2_egg_hunter/solution/: egg.asm  small.asm
source/2_2_egg_hunter/source/: egg.asm  shellcode.asm
source/3_1_stack_discipline/: CMakeLists.txt
source/3_1_stack_discipline/source/: arguments.asm  simple_stack_frame.asm  stack_discipline.asm
source/3_2_local_variables/: CMakeLists.txt
source/3_2_local_variables/solution/: local_variables.asm
source/3_2_local_variables/source/: local_variables.asm
source/3_3_local_buffer/: CMakeLists.txt
source/3_3_local_buffer/solution/: local_buffer.asm
source/3_3_local_buffer/source/: local_buffer.asm
source/3_4_preservation/: CMakeLists.txt
source/3_4_preservation/solution/: preservation.asm  preservation_alt.asm
source/3_4_preservation/source/: preservation.asm
source/3_5_calling_conventions/: worksheet.html
source/4_1_all_together/: CMakeLists.txt  Readme.md  tests.cpp
source/4_1_all_together/solution/: 0_count_chars.asm  1_count_lines.asm  2_longest_line.asm  3_count_words.asm
source/4_1_all_together/source/: 0_count_chars.asm  1_count_lines.asm  2_longest_line.asm  3_count_words.asm
